--- a/about.html
+++ b/about.html
@@ -18,11 +18,11 @@
 
         <div class="nav">
                <a href="index.html"><div class="box1">home</div></a>
-               <a href="html/about.html"><div class="box1">about</div></a>
-               <a href="html/course.html"><div class="box1">course</div></a>
-               <a href="html/gallery.html"><div class="box1">gallery</div></a>
-               <a href="html/enquiry.html"><div class="box1">Enquiry</div></a>
-               <a href="html/contact.html"><div class="box1">contact us</div></a>
+               <a href="about.html"><div class="box1">about</div></a>
+               <a href="course.html"><div class="box1">course</div></a>
+               <a href="gallery.html"><div class="box1">gallery</div></a>
+               <a href="enquiry.html"><div class="box1">Enquiry</div></a>
+               <a href="contact.html"><div class="box1">contact us</div></a>
         </div>
 
         <div class="slider">
@@ -31,11 +31,11 @@
 
         <div class="nav2">
             <a href="index.html"><div class="box2">home</div></a>
-            <a href="html/about.html"><div class="box2">about</div></a>
-            <a href="html/course.html"><div class="box2">course</div></a>
-            <a href="html/gallery.html"><div class="box2">gallery</div></a>
-            <a href="html/enquiry.html"><div class="box2">Enquiry</div></a>
-            <a href="html/contact.html"><div class="box2">contact us</div></a>
+            <a href="about.html"><div class="box2">about</div></a>
+            <a href="course.html"><div class="box2">course</div></a>
+            <a href="gallery.html"><div class="box2">gallery</div></a>
+            <a href="enquiry.html"><div class="box2">Enquiry</div></a>
+            <a href="contact.html"><div class="box2">contact us</div></a>
         </div>
         
         <div class="content">
