--- a/about.html
+++ b/about.html
@@ -49,11 +49,11 @@
 
         <div class="footer">
             <a href="index.html"><div class="box3">home</div></a>
-            <a href="html/about.html"><div class="box3">about</div></a>
-            <a href="html/course.html"><div class="box3">course</div></a>
-            <a href="html/gallery.html"><div class="box3">gallery</div></a>
-            <a href="html/enquiry.html"><div class="box3">Enquiry</div></a>
-            <a href="html/contact.html"><div class="box3" style="border: none; margin-right: 50px;">contact us</div></a>
+            <a href="about.html"><div class="box3">about</div></a>
+            <a href="course.html"><div class="box3">course</div></a>
+            <a href="gallery.html"><div class="box3">gallery</div></a>
+            <a href="enquiry.html"><div class="box3">Enquiry</div></a>
+            <a href="contact.html"><div class="box3" style="border: none; margin-right: 50px;">contact us</div></a>
         </div>
         
     </div>
